# bufrnix

./: .conclaude.yaml  .envrc  .gitignore  CLAUDE.md  README.md  TODO.md  check-examples-nix.sh  check-examples.sh  flake.nix  lint-examples.sh  result  sync-nixpkgs.sh  test-cpp-gen.nix  test-cpp.nix  test-csharp.nix  test-examples.sh  test-import-php.nix  test-proto.proto  test-simple-csharp.nix  test-simple-kotlin.nix  test.nix  todo.md
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/workflows/: check.yml  ci.yml
doc/: README.md  astro.config.mjs  book.toml  bun.nix  default.nix  flake-module.nix  flake.nix  package-lock.json  package.json
doc/src/: SUMMARY.md  install.md  languages.md
doc/src/styles/: custom.css
examples/: python-examples-README.md
examples/c-nanopb/: .gitignore  Makefile  README.md  flake.nix  main.c  test.c  test.sh
examples/c-protobuf-c/: .gitignore  Makefile  README.md  flake.nix  main.c  test.c  test.sh  test_example
examples/cpp-basic/: CMakeLists.txt  README.md  flake.nix
examples/cpp-basic/proto/example/v1/: person.proto
examples/cpp-basic/src/: main.cpp
examples/cpp-grpc/: CMakeLists.txt  README.md  flake.nix
examples/cpp-grpc/proto/example/v1/: greeter.proto
examples/cpp-grpc/src/: client.cpp  server.cpp
examples/csharp-basic/: .gitignore  CSharpExample.csproj  Program.cs  README.md  deps.nix  flake.nix
examples/csharp-flake-parts/: CSharpExample.csproj  Program.cs  README.md  deps.json  flake.nix
examples/csharp-grpc/: .gitignore  CSharpGrpcExample.sln  README.md  deps.nix  flake.nix
examples/csharp-grpc/Client/: Client.csproj  Program.cs  default.nix  deps.json
examples/csharp-grpc/Server/: Program.cs  Server.csproj  default.nix  deps.json
examples/dart-example/: README.md  buf.yaml  flake.nix  pubspec.yaml
examples/dart-example/lib/: grpc_client_example.dart  main.dart
examples/dart-example/test/: example_test.dart
examples/doc-example/: README.md  flake.nix
examples/go-advanced/: README.md  flake.nix  go.mod  main.go
examples/go-breaking-change/: README.md  flake.nix  go.mod  main.go
examples/go-flake-parts/: README.md  flake.nix  go.mod  main.go
examples/go-multiple-outputs/: README.md  flake.nix
examples/go-multiproject/: README.md  flake.nix  go.mod  main.go
examples/go-struct-transformer/: README.md  flake.nix  go.mod  go.sum  main.go  test.sh
examples/go-struct-transformer/models/: models.go
examples/java-basic/: README.md  flake.nix
examples/java-grpc/: README.md  flake.nix
examples/java-protovalidate/: README.md  flake.nix
examples/js-annotations/: README.md  flake.nix  package-lock.json  package.json  tsconfig.json
examples/js-annotations/src/: index.ts
examples/js-es-modules/: .gitignore  README.md  flake.nix  package.json
examples/js-es-modules/proto/: buf.yaml  product.proto  user.proto
examples/js-es-modules/src/: client-example.ts  index.ts  server-example.ts
examples/js-example/: README.md  flake.nix  package.json  tsconfig.json
examples/js-example/src/: index.ts
examples/js-grpc-web/: .gitignore  README.md  envoy.yaml  flake.nix  package-lock.json  package.json  tsconfig.json
examples/js-grpc-web/proto/: chat.proto  user.proto
examples/js-grpc-web/src/: client.ts  server.ts
examples/js-protovalidate/: README.md  flake.nix  package.json
examples/js-protovalidate/src/: validate.ts
examples/kotlin-basic/: README.md  flake.nix
examples/kotlin-grpc/: README.md  flake.nix
examples/mdx-docs-example/: flake.nix
examples/multi-output-example/: README.md  flake.nix
examples/multilang/: README.md  flake.nix
examples/multilang-multi-project/: README.md  flake.nix  go.mod  index.js  requirements.txt
examples/multilang-per-files/: README.md  flake.nix
examples/multilang-per-files/backend/: go.mod  main.go
examples/multilang-per-files/frontend/: package.json  tsconfig.json
examples/php-features-test/: README.md  buf.gen.yaml  flake.nix  laravel-example.php  symfony-example.php  test-all.sh  test-async-features.php
examples/php-grpc-roadrunner/: .rr.yaml  README.md  composer.json  flake.nix  roadrunner-dev.sh  test-client.php  worker.php
examples/php-twirp/: .envrc  README-NISH-SHELL.md  README.md  client.php  composer.json  flake.nix  mbstring_polyfill.php  server.php  setup-deps-manually.sh
examples/php-twirp/.nix-php/: php-wrapper
examples/proto-copier/: README.md  flake.nix
examples/python-basic/: README.md  flake.nix  test-derivation.nix  test.py  test.sh
examples/python-basic/proto/: basic.proto
examples/python-betterproto/: README.md  flake.nix  test.sh  test_betterproto.py
examples/python-betterproto-pydantic/: README.md  flake.nix  multi-proto-example.sh  test_pydantic.py
examples/python-betterproto/proto/: modern.proto
examples/python-example/: README.md  flake.nix  main.py  test_example.py
examples/python-flake-parts/: README.md  flake.nix  test.py
examples/python-flake-parts/proto/: greeter.proto
examples/python-grpc/: client.py  flake.nix  server.py  test.sh
examples/python-typed/: README.md  flake.nix  mypy.ini  test.sh  test_types.py
examples/scala-basic/: README.md  build.sbt  flake.nix
examples/simple-flake/: README.md  flake.nix  go.mod  go.sum  main.go
examples/svg-example/: README.md  flake.nix
examples/swift-example/: .gitignore  Package.swift  README.md  buf.yaml  flake.nix
examples/ts-flake-parts/: README.md  flake.nix  package-lock.json  package.json  tsconfig.json
scripts/: generate-docs.sh
shells/: flake-module.nix
specs/: multiple-output-paths.md  option-locality.md
src/: bufrnix-options.nix  mkBufrnix.nix  module.nix
src/languages/: README.md  module-template.nix
src/lib/: bufrnix-options.nix  mkBufrnix.nix
src/utils/: debug.nix
test-nix-shell-php-twirp/: test-shell.sh
test-output/GPBMetadata/: TestProto.php
test-output/Test/: HelloRequest.php  HelloResponse.php  HelloService.php  HelloServiceAbstractClient.php  HelloServiceClient.php  HelloServiceJsonClient.php  HelloServiceServer.php  TwirpError.php
tests/: default-config.nix
(+293 files in other folders)
